crates/math-core/tests/snapshots/error_test__limits_in_bad_spot_3.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\int_'\\limits^a"
---
Error: '^' or '_' directly followed by '^', '_' or prime.
   ╭─[ <input>:1:6 ]
   │
 1 │ \int_'\limits^a
   │      ┬  
   │      ╰── unexpected bound
───╯
