crates/math-core/tests/snapshots/error_test__macro_parameter_outside_macro.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x #1 y"
---
Error: Macro parameter found outside of custom command definition.
   ╭─[ <input>:1:3 ]
   │
 1 │ x #1 y
   │   ─┬  
   │    ╰── unexpected macro parameter
───╯
