crates/math-core/tests/snapshots/error_test__math_command_in_fbox.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\fbox{\\alpha}"
---
Error: Not valid in text mode.
   ╭─[ <input>:1:7 ]
   │
 1 │ \fbox{\alpha}
   │       ───┬──  
   │          ╰──── this is not valid in text mode
───╯
