crates/math-core/tests/snapshots/error_test__mspace_text_unit.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x\\mspace{1em} y"
---
Error: Text unit "em" cannot be used with \mkern/\mskip/\mspace.
   ╭─[ <input>:1:9 ]
   │
 1 │ x\mspace{1em} y
   │         ──┬──  
   │           ╰──── illegal unit here
───╯
