crates/math-core/tests/snapshots/error_test__newcommand_redefines_builtin.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\newcommand{\\frac}[2]{x}"
---
Error: This command is already defined.
   ╭─[ <input>:1:13 ]
   │
 1 │ \newcommand{\frac}[2]{x}
   │             ──┬──  
   │               ╰──── already defined
───╯
